# fastapi-template

./: .dockerignore  .env.example  .gitignore  README.md  backend.dockerfile  docker-compose-prod.yaml  docker-compose.yaml
app/: pyproject.toml  pytest.ini  tt.py
app/app/: main.py
app/app/api/: api_routers.py  dependencies.py  pagination.py  responses_errors.py
app/app/api/endpoints/: point_test.py  token.py  user.py
app/app/api/responses/: __init__.py  (+3 more)
app/app/core/: config.py
app/app/db/: base.py  session.py
app/app/exceptions/: base.py  error_server_500.py  jwt_error.py  not_found.py  user_error.py
app/app/middlewares/: logger.py
app/app/models/: token.py  user.py
app/app/repositories/: base.py  token.py  user.py
app/app/schemas/: auth.py  base.py  base_error.py  token.py  user.py
app/app/services/: initialization_services.py  jwt_service.py  serialize_model.py  token.py  user.py
app/app/uow/: __init__.py
app/app/utils/: const.py  costum_router.py  create_responses.py  format_str_in_uuid.py  global_dependencies.py  hateoas.py  utc_now.py  validate_data.py
app/migrations/: env.py
app/migrations/versions/: 2024-05-06_init.py
app/scripts/: create_super_user.py
app/tests/: .env.test.example  .test.env  README.md  async_database.py  conftest.py
app/tests/e2e/: conftest.py  test_points.py
app/tests/fixture_for_schemas/: jwt.py  token.py  user.py
app/tests/integration/: conftest.py  test_repository.py  test_service_integration.py  utils.py
app/tests/unit/: conftest.py  test_context_uow.py  test_param.py  test_services.py  utils.py
(+15 files in other folders)
