[tool.poetry]
name = "fast-api-template"
version = "0.1.0"
description = ""
authors = ["Keni13-Coder <vladmoldovanov03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
alembic = "^1.13.1"
loguru = "^0.7.2"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
uvicorn = "^0.29.0"
sqlalchemy-utils = "^0.41.2"
httpx = "^0.27.0"
redis = "^5.0.3"
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-dotenv = "^0.5.2"
pytest-timeout = "^2.3.1"
bcrypt = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
